--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
   "@heroui/switch": "2.2.8",
   "@heroui/system": "2.4.6",
   "@heroui/theme": "2.4.5",
+  "@nextui-org/react": "^2.6.11",
   "@react-aria/ssr": "3.9.7",
   "@react-aria/visually-hidden": "3.8.18",
+  "@reduxjs/toolkit": "^2.5.1",
   "clsx": "2.1.1",
   "framer-motion": "11.13.1",
   "intl-messageformat": "^10.5.0",
   "next": "15.0.4",
   "next-themes": "^0.4.4",
   "react": "18.3.1",
-  "react-dom": "18.3.1"
+  "react-dom": "18.3.1",
+  "react-redux": "^9.2.0",
+  "sonner": "^1.7.3"
  },
  "devDependencies": {
   "@next/eslint-plugin-next": "15.0.4",
