--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "react": "18.3.1",
   "react-dom": "18.3.1",
   "react-redux": "^9.2.0",
+  "redux-persist": "^6.0.0",
   "sonner": "^1.7.3"
  },
  "devDependencies": {
