--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "@react-aria/ssr": "3.9.7",
   "@react-aria/visually-hidden": "3.8.18",
   "@reduxjs/toolkit": "^2.5.1",
+  "aos": "^2.3.4",
   "clsx": "2.1.1",
   "framer-motion": "11.13.1",
   "intl-messageformat": "^10.5.0",
